2007-01-22	Frank Richter	<frank.richter@gmail.com>

* Fix a clean up issue: destroying a script object factory could have accessed
  an already freed component manager.

2007-01-22	Frank Richter	<frank.richter@gmail.com>

* Add scripting support: it's possible to create "templates" for scripting
  objects which can be associated to globals in scripting (ie when a script
  requests a global, an actual object is instantiated from the template).

2007-01-22	Frank Richter	<frank.richter@gmail.com>

* Add ability to create OSGK_Strings from client code.

2007-12-24	Frank Richter	<frank.richter@gmail.com>

* Specify 'hidden' visibility flags when building with gcc.

2007-12-24	Frank Richter	<frank.richter@gmail.com>

* Linux compile fixes for repaint dump code.
* Made browser object process GTK events before dirty queries/updates.
* Made all files include mozilla-config.h.

2007-12-24	Frank Richter	<frank.richter@gmail.com>

* Call gtk_init() if the XULrunner widget set is GTK2.

2007-12-22	Frank Richter	<frank.richter@gmail.com>

* Gentoo build tweaks.

2007-12-23	Frank Richter	<frank.richter@gmail.com>

* Fix wrong library path collection in relaytool.

2007-12-23	Frank Richter	<frank.richter@gmail.com>

* Use realpath() instead of cwd stuff on non-MSVC platforms.

2007-12-22	Frank Richter	<frank.richter@gmail.com>

* CMakeLists tweaks to support building with mozilla.org XULrunner SDK for
  Linux. Utilize relaytool.

2007-12-22	Frank Richter	<frank.richter@gmail.com>

* GCC compile and Linux build fixes.

2007-12-15	Frank Richter	<frank.richter@gmail.com>

* Added support for setting the XULrunner profile directory to store
  persistent data and caches.

2007-12-15	Frank Richter	<frank.richter@gmail.com>

* Sanitized focus handling; now only one widget has focus (and gets focus
  notifications), not all widgets up in the widget tree.

2007-12-15	Frank Richter	<frank.richter@gmail.com>

* Changed the embedded browser object to not be a chrome wrapper any more.